[package]
name = "video-streaming"
version = "0.1.0"
edition = "2021"

[dependencies]
socket2 = "0.5.3"
tokio = { version = "1.28.1", default-features = false, features = ["macros", "fs", "io-util", "rt-multi-thread"] }
tracing = "0.1.37"
wtransport = "0.4.0"
anyhow = "1.0.93"
axum = "0.7.7"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
